--- a/google-play-OHE_AS3-AG.ipynb
+++ b/google-play-OHE_AS3-AG.ipynb
@@ -350,19 +350,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[30.0 4.4 24281.0 29.0 0.0 1.0]\n",
-      " [20.0 4.4 197.0 20.0 0.0 1.0]\n",
-      " [13.0 3.9 464.0 28.0 0.0 1.0]\n",
+      "[[1.0]\n",
+      " [1.0]\n",
+      " [1.0]\n",
       " ...\n",
-      " [15.0 4.8 220125.0 11.0 0.0 1.0]\n",
-      " [21.0 4.6 66407.0 19.0 0.0 4.0]\n",
-      " [11.0 3.4 17.0 0.246 0.0 1.0]] [[5.0 3.3 1476.0 18.0 0.0 4.0]\n",
-      " [29.0 4.6 48979.0 14.0 0.0 1.0]\n",
-      " [29.0 3.5 81747.0 9.1 0.0 1.0]\n",
+      " [1.0]\n",
+      " [4.0]\n",
+      " [1.0]] [[4.0]\n",
+      " [1.0]\n",
+      " [1.0]\n",
       " ...\n",
-      " [23.0 3.7 21.0 0.376 1.0 1.0]\n",
-      " [28.0 4.4 199739.0 66.0 0.0 1.0]\n",
-      " [7.0 5.0 6.0 5.0 0.0 3.0]] [5000000 50000 50000 ... 10000000 5000000 5000] [500000 5000000 10000000 ... 5000 10000000 100]\n"
+      " [1.0]\n",
+      " [1.0]\n",
+      " [3.0]] [5000000 50000 50000 ... 10000000 5000000 5000] [500000 5000000 10000000 ... 5000 10000000 100]\n"
      ]
     },
     {
@@ -381,7 +381,8 @@
    ],
    "source": [
     "# split into input (X) and output (Y) variables\n",
-    "Xa = data_app_cN[:, [0, 1, 2, 3, 5, 6]]\n",
+    "#Xa = data_app_cN[:, [0, 1, 2, 3, 5, 6]]\n",
+    "Xa = data_app_cN[:, [6]]\n",
     "Ya = data_app_cN[:,4]\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(Xa, Ya, test_size=0.33, random_state=42)\n",
@@ -409,20 +410,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2549, 6)\n",
-      "Accuracy score:  0.372695174578266\n",
+      "(2549, 1)\n",
+      "Accuracy score:  0.23264025107885444\n",
       "['100' '5000' '50000' '500000' '5000000' '10000000']\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "        100      0.677     0.317     0.431       139\n",
-      "       5000      0.706     0.433     0.537       411\n",
-      "      50000      0.622     0.149     0.240       463\n",
-      "     500000      0.826     0.070     0.129       545\n",
-      "    5000000      0.284     1.000     0.443       578\n",
-      "   10000000      1.000     0.104     0.189       413\n",
+      "        100      0.000     0.000     0.000       139\n",
+      "       5000      0.000     0.000     0.000       411\n",
+      "      50000      0.000     0.000     0.000       463\n",
+      "     500000      0.269     0.066     0.106       545\n",
+      "    5000000      0.226     0.905     0.361       578\n",
+      "   10000000      0.351     0.082     0.133       413\n",
       "\n",
-      "avg / total      0.667     0.373     0.312      2549\n",
+      "avg / total      0.165     0.233     0.126      2549\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -440,37 +449,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GaussianNB Accuracy : 0.5476657512750098\n",
-      "KNN Accuracy : 0.6418203216947823\n",
-      "BNB Accuracy : 0.2530404080031385\n",
-      "LR Accuracy : 0.4099646920360926\n",
-      "SDG Accuracy : 0.1620243232640251\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
-      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVC Accuracy : 0.372695174578266\n",
-      "LSVC Accuracy : 0.25460965084346804\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gnb = GaussianNB()\n",
     "KNN = KNeighborsClassifier(n_neighbors=1)\n",
