--- a/google-play-OHE_AS3-AG.ipynb
+++ b/google-play-OHE_AS3-AG.ipynb
@@ -449,9 +449,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GaussianNB Accuracy : 0.19497842291094547\n",
+      "KNN Accuracy : 0.20596312279325227\n",
+      "BNB Accuracy : 0.22636327971753628\n",
+      "LR Accuracy : 0.22636327971753628\n",
+      "SDG Accuracy : 0.22636327971753628\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\lib\\site-packages\\sklearn\\linear_model\\stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC Accuracy : 0.23264025107885444\n",
+      "LSVC Accuracy : 0.22636327971753628\n"
+     ]
+    }
+   ],
    "source": [
     "gnb = GaussianNB()\n",
     "KNN = KNeighborsClassifier(n_neighbors=1)\n",
